--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,7 +9,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 500px;
-  background-color: rgb(249, 219, 121);
+  background-color: #f9db79;
 }
 
 .texto_banner {
@@ -21,7 +21,7 @@
 
 .texto_banner h1 {
   font-size: 100px;
-  color: white;
+  color: #ffffff;
   text-shadow: 3px 5px 2px #474747;
 }
 
@@ -32,8 +32,6 @@
   display: flex;
 }
 
-.img_card,
-.img_card,
 .img_card {
   width: 50%;
   height: auto;
@@ -42,6 +40,7 @@
 
 .container_texto {
   width: 50%;
+  color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,7 +50,7 @@
 }
 
 .container_texto h2 {
-  font-size: 35px;
+  font-size: 36px;
   text-align: center;
 }
 
@@ -63,10 +62,12 @@
 
 .container_texto p {
   max-width: 600px;
+  font-size: 16px;
   line-height: 30px;
   text-align: center;
 }
 
+/*--------Responsividade do projeto---------*/
 @media (max-width: 768px){
   .texto_banner h1 {
     font-size: 60px;
