--- a/src/app/sabores/sabores.module.css
+++ b/src/app/sabores/sabores.module.css
@@ -20,21 +20,17 @@
   
   .texto_banner h1 {
     font-size: 100px;
-    color: white;
+    color: #ffffff;
     text-shadow: 3px 5px 2px #474747;
   }
   
   .secao_nossos_sabores {
     width: 100%;
     display: flex;
-
-    padding: 20px;
+    padding: 100px 20px;
     gap: 20px;
-
     position: relative;
-
     justify-content: center;
-
     flex-wrap: wrap;
   }
   
@@ -46,10 +42,8 @@
   
   .container_card {
     max-width: 1024px;
-    
     width: 300px;
     padding: 20px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +53,7 @@
   
   .container_card h3 {
     font-size: 18px;
+    color: #000000;
     text-align: center;
     gap: 10px;
   }
@@ -66,11 +61,14 @@
   .container_card p {
     max-width: 600px;
     font-size: 16px;
+    color: #000000;
     line-height: 30px;
     text-align: center;
     gap: 10px;
   }
   
+  /*--------Responsividade do projeto---------*/
+
   @media (max-width: 768px){
     .texto_banner h1 {
       font-size: 60px;
