--- a/src/componentes/Rodape/Rodape.module.css
+++ b/src/componentes/Rodape/Rodape.module.css
@@ -11,7 +11,7 @@
     max-width: 1024px;
     display: flex;
     align-items: center;
-    color: white;
+    color: #ffffff;
     padding: 100px 20px;
     justify-content: space-between;
   }
@@ -28,11 +28,13 @@
   
   .container_direito_autoral {
     width: 100%;
-    color: white;
+    color: #ffffff;
     text-align: center;
     padding: 20px;
   }
   
+  /*--------Responsividade do projeto---------*/
+
   @media (max-width: 768px){
     .container_informacoes {
       flex-direction: column;
